<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".BookReview"
    android:background="@drawable/sbackground">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="460dp"
    android:orientation="vertical">
    <TextView
        style="@style/heading_styling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/bkreview_info"
        android:textAlignment="center"
        android:textSize="22dp" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:paddingTop="6dp" />


</LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="55dp"
        android:layout_marginStart="15dp"
        android:text="@string/bk_toreview_online"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvClick"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="55dp"
        android:onClick="onClick"
        android:text="@string/bk_click"
        android:textColor="#ff00"
        android:textAlignment="viewStart"
        android:textSize="20dp" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bookNavView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/navigation" />

</RelativeLayout>